fixed in cards sessions: top spacing, clickable when solution shown

--- a/frontend/app/src/app/ui/trainer/cards-trainer-session/cards-trainer-session.component.scss
+++ b/frontend/app/src/app/ui/trainer/cards-trainer-session/cards-trainer-session.component.scss
@@ -8,6 +8,7 @@
 
 #container {
   width: 500px;
+  padding: 20px;
 
   display: flex;
   flex-direction: column;
@@ -50,6 +51,10 @@
   padding: 25px;
   justify-content: center;
   align-items: center;
+
+  &.clickable {
+    cursor: pointer;
+  }
 
   .card-text {
     font-size: 120%;
